<resources>
    <string name="app_name"><b>H</b>ealth<b>S</b>pring</string>
    <string name="empty_list">No Record Found</string>
    <string name="no_data_list">No data available.\n Please try with another filter.</string>
    <string name="runtime_permissions_txt">Please enable all permissions from app settings.</string>

    <!---Login-->
    <string name="login_screen">Login</string>
    <string name="logout_screen">Logout</string>
    <string name="synch_category">Default Category</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>

    <!---Dashboard-->
    <string name="dashboard_profile">Profile</string>
    <string name="dashboard_appointments">Appointments</string>
    <string name="dashboard_patientqueue">Patient Queue</string>
    <string name="dashboard_searchpatient">Search Patient</string>
    <string name="dashboard_aboutpalash">About</string>
    <string name="dashboard_patientinfo">Patient Information</string>
    <string name="dashboard_sponsor_info">Sponsor Information</string>

    <!---ChangePassword-->
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change">Change Password</string>
    <string name="setting">Settings</string>
    <string name="app_setting">App Settings</string>

    <!---DoctorProfile-->
    <string name="profile_perfix">Prefix</string>
    <string name="profile_fname">First Name</string>
    <string name="profile_mname">Middle Name</string>
    <string name="profile_lname">Last Name</string>
    <string name="profile_specialization">Specialization</string>
    <string name="profile_dob">Date Of Birth</string>
    <string name="profile_edu">Education</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_email">Email ID</string>
    <string name="profile_mob">Mobile No.</string>
    <string name="profile_flat_build">Flat and Building</string>
    <string name="profile_street">Street name</string>
    <string name="profile_maritalstatus">Marital Status</string>
    <string name="profile_blood">Blood Group</string>
    <string name="profile_known">Known of Healthspring</string>
    <string name="profile_country">Select Country</string>
    <string name="profile_region">Select Region</string>
    <string name="profile_state">Select State</string>
    <string name="profile_city">Select City</string>
    <string name="patient_category_l1">Select Category L1</string>
    <string name="patient_category_l2">Select Category L2</string>
    <string name="patient_company">Select Company</string>
    <string name="patient_category_l3">Select Category L3</string>
    <string name="patient_effective_date">Effective Date</string>
    <string name="patient_expiry_date">Expiry Date</string>
    <string name="patient_card_issue_date">Card Issue Date</string>
    <string name="patient_pcp_doctor">Select PCP Doctor</string>
    <string name="patient_doctor_name">Select Doctor</string>

    <!---Search Patient-->
    <string name="serach">Search Patient...</string>
    <string name="dashboard_patientregistration">Patient Registration</string>
    <string name="dashboard_visit_list">Visit List</string>
    <string name="dashboard_visit_book">Book Visit</string>
    <string name="exit_app_alert">Are You sure do you want to exit application</string>

    <!---Doctor List-->
    <string name="book">Book</string>
    <string name="dashboard_doctorlist">Doctor List</string>

    <!---Time Slot -->
    <string name="dashboard_timeslot">Time Slot</string>
    <string name="tvBookAPHeader">Available Time Slots</string>
    <string name="time_slots">Time Slots</string>
    <string name="title_activity_appointment">Appointments</string>

    <!---Appointment -->
    <string name="dashboard_Appointment">Book Appointment</string>
    <string name="patientname">Patient Name</string>
    <string name="docotrname">Doctor Name</string>
    <string name="appointmentreason">Appointment Reason</string>
    <string name="visit_type">Visit Type</string>
    <string name="department">Department</string>
    <string name="complaint">Complaint</string>
    <string name="remark">Remark</string>
    <string name="date">Date</string>
    <string name="appointmentrereason">Appointment Reschedule Reason</string>
    <string name="appointmentreschedule">Appointment Reschedule </string>
    <string name="time">Time</string>
    <string name="appointmentcanclereason">Appointment Cancel Reason</string>
    <string name="sumbmit">Submit</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="select_unit">Select Clinic</string>

    <string name="patient_emr">Patient EMR</string>>
    <string name="emr_vitals">Vitals</string>
    <string name="emr_diagnosis">Diagnosis</string>
    <string name="emr_cpoe_medicine">CPOE Prescription</string>
    <string name="emr_cpoe_investigation">Investigation</string>
    <string name="emr_complaint">Complaints</string>
    <string name="emr_followup">Follow Up</string>
    <string name="emr_referral">Referral</string>
    <string name="emr_ice">ICE</string>
    <string name="emr_summary">Print Summary</string>

    <string name="drug_name">Drug Name</string>
    <string name="dose">Dose</string>
    <string name="route">Route</string>
    <string name="frequency">Frequency</string>
    <string name="days">Days</string>
    <string name="quntity">Qty</string>
    <string name="reason">Instruction</string>

    <string name="food">Food Name</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="medicine_drug_name">Medicine name</string>
    <string name="medicine_dose">Medicine dose</string>
    <string name="medicine_route">Medicine route</string>
    <string name="medicine_frequency">Medicine frequency</string>
    <string name="medicine_days">Days</string>
    <string name="medicine_quntity">Quantity</string>
    <string name="medicine_reason">Medicine instruction</string>

    <string name="diagnosis_add">Add Diagnosis</string>
    <string name="diagnosis_name">Diagnosis Name</string>
    <string name="diagnosis_code">Diagnosis Code</string>
    <string name="diagnosis_type">Diagnosis Type</string>
    <string name="diagnosis_remark">Diagnosis Remark</string>

    <string name="vitals_add">Add Vitals </string>
    <string name="vitals_name">Vitals Name</string>
    <string name="vitals_datetime">Date Time</string>
    <string name="vitals_value">Value</string>
    <string name="vitals_unit">Unit</string>
    <string name="vitals_minvalue">Minvalue</string>
    <string name="vitals_maxvalue">Maxvalue</string>

    <string name="cpoeservice_name">Service Name</string>
    <string name="cpoeservice_type">Service Type</string>
    <string name="cpoeservice_rate">Rate</string>
    <string name="cpoeservice_priority">Priority</string>
    <string name="cpoeinvestigation_add">Add Investigation </string>
    <string name="referral_add">Add Referral </string>
    <string name="cpoemedicine_add">Add CPOE Prescription</string>

    <string name="drug">Drug</string>
    <string name="molecule">Molecule</string>

    <string name="Synchronization">Synchronization</string>
    <string name="please_wait">Please wait</string>

    <string name="offline_alert">Something went wrong.You still want to save record offline?</string>
    <string name="offline_net_alert">Network is unreachable. You still want to save record offline?</string>
    <string name="network_alert">Network is unreachable. Please check your network and try again.</string>
    <string name="booking_alert">Appointment booking functionality is not available for Head office</string>
    <string name="register_alert">Patient registration functionality is not available for Head office</string>
    <string name="visit_alert">Visit booking functionality is not available for Head office.e</string>
    <string name="opps_alert">Oops...</string>
    <string name="login_alert">Invalid username or password. Please try again</string>
    <string name="filter_date_alter">"Date difference should be maximum 7 days"</string>

    <!--  app update activity   -->
    <string name="update_title">App update available</string>
    <string name="update_sub_title">Update the app to enjoy a much faster app with many new feature</string>
    <string name="update">Update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
