<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/ten_margin">

    <Chronometer
        android:id="@+id/emr_Medicien_chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/ten_margin">

            <android.support.design.widget.TextInputLayout
                style="@style/TextLabel_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/current_medication_add_edt_medicine_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/medicine_drug_name"
                    android:imeOptions="actionSearch"
                    android:inputType="textAutoComplete|textAutoCorrect"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/ten_margin"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/small_text_size" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/TextLabel_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/current_medication_add_edt_medicine_dose"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789"
                    android:hint="@string/medicine_dose"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/ten_margin"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/small_text_size" />
            </android.support.design.widget.TextInputLayout>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/current_medication_add_medicine_spinner_frequentcy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ms_arrowColor="@color/text_color"
                app:ms_arrowSize="@dimen/small_text_size"
                app:ms_baseColor="@color/text_color"
                app:ms_enableErrorLabel="false"
                app:ms_enableFloatingLabel="true"
                app:ms_highlightColor="@color/text_color"
                app:ms_hint="@string/medicine_frequency"
                app:ms_hintColor="@color/text_color"
                app:ms_multiline="false" />

            <android.support.design.widget.TextInputLayout
                style="@style/TextLabel_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/current_medication_add_medicine_edt_days"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789"
                    android:hint="@string/medicine_days"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/ten_margin"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/small_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/TextLabel_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/current_medication_add_edt_medicine_quntity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:hint="@string/medicine_quntity"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/ten_margin"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/small_text_size" />
            </android.support.design.widget.TextInputLayout>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/current_medication_add_medicine_spinner_route"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ms_arrowColor="@color/text_color"
                app:ms_arrowSize="@dimen/small_text_size"
                app:ms_baseColor="@color/text_color"
                app:ms_enableErrorLabel="false"
                app:ms_enableFloatingLabel="true"
                app:ms_highlightColor="@color/text_color"
                app:ms_hint="@string/medicine_route"
                app:ms_hintColor="@color/text_color"
                app:ms_multiline="false" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/current_medication_add_medicine_spinner_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ms_arrowColor="@color/text_color"
                app:ms_arrowSize="@dimen/small_text_size"
                app:ms_baseColor="@color/text_color"
                app:ms_enableErrorLabel="false"
                app:ms_enableFloatingLabel="true"
                app:ms_highlightColor="@color/text_color"
                app:ms_hint="@string/medicine_reason"
                app:ms_hintColor="@color/text_color"
                app:ms_multiline="false" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>


