<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/five_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_profile_lable1"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginTop="@dimen/five_margin"
                android:background="@color/bluelight400"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:padding="3dp"
                android:singleLine="true"
                android:text="Personal Information"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/common_text_size"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="@dimen/five_margin"
                android:paddingRight="@dimen/five_margin"
                android:paddingTop="@dimen/five_margin">

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/patient_reg_spinnerperfix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ms_arrowColor="@color/text_color"
                    app:ms_arrowSize="@dimen/small_text_size"
                    app:ms_baseColor="@color/text_color"
                    app:ms_enableErrorLabel="false"
                    app:ms_enableFloatingLabel="true"
                    app:ms_highlightColor="@color/text_color"
                    app:ms_hint="@string/profile_perfix"
                    app:ms_hintColor="@color/text_color"
                    app:ms_multiline="false" />

                <android.support.design.widget.TextInputLayout
                    style="@style/TextLabel_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/patient_reg_edt_fname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:hint="@string/profile_fname"
                        android:inputType="textCapWords"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/ten_margin"
                        android:singleLine="true"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/small_text_size" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/TextLabel_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/patient_reg_edt_mname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:hint="@string/profile_mname"
                        android:inputType="textCapWords"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/ten_margin"
                        android:singleLine="true"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/small_text_size" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/TextLabel_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/patient_reg_edt_lname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:hint="@string/profile_lname"
                        android:inputType="textCapWords"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/ten_margin"
                        android:singleLine="true"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/small_text_size" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/TextLabel_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/patient_reg_edt_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789/"
                        android:hint="@string/profile_dob"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/ten_margin"
                        android:singleLine="true"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/small_text_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/TextLabel_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/patient_reg_edt_education"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_edu"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/ten_margin"
                        android:singleLine="true"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/small_text_size" />
                </android.support.design.widget.TextInputLayout>

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/patient_reg_spinner_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ms_arrowColor="@color/text_color"
                    app:ms_arrowSize="@dimen/small_text_size"
                    app:ms_baseColor="@color/text_color"
                    app:ms_enableErrorLabel="false"
                    app:ms_enableFloatingLabel="true"
                    app:ms_highlightColor="@color/text_color"
                    app:ms_hint="@string/profile_gender"
                    app:ms_hintColor="@color/text_color"
                    app:ms_multiline="false" />

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/patient_reg_spinner_maritalstatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ms_arrowColor="@color/text_color"
                    app:ms_arrowSize="@dimen/small_text_size"
                    app:ms_baseColor="@color/text_color"
                    app:ms_enableErrorLabel="false"
                    app:ms_enableFloatingLabel="true"
                    app:ms_highlightColor="@color/text_color"
                    app:ms_hint="@string/profile_maritalstatus"
                    app:ms_hintColor="@color/text_color"
                    app:ms_multiline="false" />

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/patient_reg_spinner_bloodgroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ms_arrowColor="@color/text_color"
                    app:ms_arrowSize="@dimen/small_text_size"
                    app:ms_baseColor="@color/text_color"
                    app:ms_enableErrorLabel="false"
                    app:ms_enableFloatingLabel="true"
                    app:ms_highlightColor="@color/text_color"
                    app:ms_hint="@string/profile_blood"
                    app:ms_hintColor="@color/text_color"
                    app:ms_multiline="false" />


            </LinearLayout>

            <TextView
                android:id="@+id/txt_profile_lable3"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginTop="@dimen/five_margin"
                android:background="@color/bluelight400"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:padding="3dp"
                android:singleLine="true"
                android:text="Contact Details"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/common_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/five_margin"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/five_margin">

                <android.support.design.widget.TextInputLayout
                    style="@style/TextLabel_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/patient_reg_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/ten_margin"
                        android:singleLine="true"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/small_text_size" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/TextLabel_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/patient_reg_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_mob"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:digits="0123456789"
                        android:paddingLeft="@dimen/ten_margin"
                        android:singleLine="true"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/small_text_size" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
